# deepfake-impl

./: README.md  pyproject.toml  vercel.json
api/: deepfake_api.py  render.yaml  requirements.txt
deepfake-extension/: background.js  manifest.json  popup.html  popup.js
extension/: content.js  manifest.json  popup.html  popup.js
